bpo-37474: Don't call fedisableexcept() on FreeBSD

On FreeBSD, Python no longer calls fedisableexcept() at startup to
control the floating point control mode. The call became useless
since FreeBSD 6: it became the default mode.